--- a/restaurative.tex
+++ b/restaurative.tex
@@ -2,6 +2,7 @@
 \documentclass[french]{beamer}
 \input{preamble/packages}
 \input{preamble/redac}
+\AtBeginEnvironment{quote}{\small}
 
 %\setbeamertemplate{headline}[singleline]
 %\setbeamertemplate{footline}[authortitle]
@@ -44,26 +45,49 @@
 \section{Les freins à la libération de la parole}
 \subsection{Obstacles systémiques}
 \begin{frame}
-  \frametitle{Obstacles systémiques}
+  \frametitle{Poids des tabous sociaux et culturels}
   \begin{itemize}
-    \item Poids des tabous sociaux et culturels autour des violences sexistes et sexuelles. → silence pendant des années dans la communauté de Hollow Water
-      \begin{quote}
-        \textit{"Quand on parle de violences, notamment de violences sexuelles, on parle de traumatismes, on parle de choses que finalement, on est très peu nombreux·ses à ne pas avoir vécu dans nos vies, voir dans nos enfances."} (Transcription 1.json)
-      \end{quote}
-      \begin{quote}
-        \textit{"#MeToo c'est difficile, #MeToo c'est violent, #MeToo c'est dur. Je pense que vous êtes nombreux et nombreuses ici a peut-être avoir ressenti ce que j'ai pu ressentir tout à l'heure en assistant à des conversations, des petites accélérations cardiaques un peu bizarres, des petits malaises, des petites nausées."} (Transcription 1.json)
-        \end{quote}
-      \begin{quote}
-        \textit{"Dans la communauté de Hollow Water, le silence autour des violences sexuelles était profondément enraciné dans les tabous culturels et sociaux. Ce silence a perduré pendant des années, empêchant les victimes de s'exprimer et de chercher de l'aide."} (Hollow.vtt)
-      \end{quote}
-    \item Peur des représailles ou du jugement social pour les victimes. → jugements au moment de porter plainte pour certaines minorités
-      \begin{quote}
-        \textit{"Il y a aussi un énorme facteur de peur. Il y a la peur du cyberharcèlement, il y a la peur de la réception, de la réaction de sa famille, de ses proches, de son entourage professionnel, mais aussi la peur des poursuites judiciaires et notamment des poursuites en diffamation."} (Transcription 3.txt)
-      \end{quote}
+    \item Wanipigow : autochtones (amérindiens) du Canada
+    \item Réserve Hollow Water (Manitoba), 16 km², 500 habitants
   \end{itemize}
   \begin{block}{Hollow Water}
-    Hollow Water est une communauté qui a vécu dans le silence pendant de nombreuses années. Ce silence a finalement été brisé, entraînant des changements et des développements significatifs au sein de la communauté.
+    \begin{quote}
+      There was one thing that was never discussed, that was sexual abuse.
+      That was out. 
+      (…)
+    \end{quote}
+    \begin{quote}
+      At that stage, all we were able to say was we were abused, but we were not saying that sexual abuse, like we wouldn't even say the word because it was so, I don't know, really horrible anyway, those days.
+    \end{quote}
   \end{block}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Difficultés à s’exprimer}
+  \begin{itemize}
+    \item Sujet difficile à aborder
+  \end{itemize}
+  \begin{block}{Comprendre \#MeToo (Lauren Bastide)}
+    \begin{quote}
+      \#MeToo c'est difficile, \#MeToo c'est violent, \#MeToo c'est dur. Je pense que vous êtes nombreux et nombreuses ici a peut-être avoir ressenti ce que j'ai pu ressentir tout à l'heure en assistant à des conversations, des petites accélérations cardiaques un peu bizarres, des petits malaises, des petites nausées. Quand on parle de violences, notamment de violences sexuelles, on parle de traumatismes
+    \end{quote}
+  \end{block}
+  \begin{itemize}
+    \item Éviter de faire répéter les victimes
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Peur des représailles, du jugement social}
+  \begin{block}{Enquêter sur les violences (Lénaïg Bredoux)}
+    \begin{quote}
+      La médiatisation des affaires, il suffit de demander à des femmes qui sont passées par là, à quel point c'est difficile, c'est long. (…) c'est pénible, parce que c'est beaucoup d'angoisse, c'est beaucoup de stress, vous ne savez pas la réception de tout ça. Et il y a aussi un énorme facteur de peur. Il y a la peur du cyberharcèlement, il y a la peur de la réception, de la réaction de sa famille, de ses proches, de son entourage professionnel, mais aussi la peur des poursuites judiciaires et notamment des poursuites en diffamation.
+    \end{quote}
+  \end{block}
+  \begin{itemize}
+    \item Procédures \og{}baillon\fg{}
+    \item Parfois retirées discrètement
+  \end{itemize}
 \end{frame}
 
 \subsection{Limites du système judiciaire}
@@ -71,7 +95,9 @@
   \frametitle{Les limites du système judiciaire classique}
   \begin{itemize}
     \item Un processus centré sur la preuve, où la parole de la victime est souvent mise en doute.
-    \item Classements sans suite et taux de condamnation faibles : un facteur de découragement. → principes à respecter pour pouvoir condamner quelqu’un
+    \item \og{}Je te crois\fg{}, mais pas en justice !
+    \item Classements sans suite et taux de condamnation faibles : un facteur de découragement
+    \item Différence entre la reconnaissance légale d’un fait qualifié et la contestation de la parole de la victime
     \item Absence d’un dialogue direct avec l’agresseur : l’agresseur ne se remet pas en question de la même manière
   \end{itemize}
 \end{frame}
