--- a/restaurative.tex
+++ b/restaurative.tex
@@ -22,9 +22,9 @@
     \path (current page.south east) node[anchor=south east, inner sep=0] {
       \includegraphics[height=1cm]{LAMSADE95.jpg}
     };
-    \path (current page.south) ++ (0, 4em) node[anchor=south, inner sep=0] {
-      \scriptsize\textcolor{blue}{\url{https://github.com/oliviercailloux/restaurative}}
-    };
+    % \path (current page.south) ++ (0, 4em) node[anchor=south, inner sep=0] {
+    %   \scriptsize\textcolor{blue}{\url{https://github.com/oliviercailloux/restaurative}}
+    % };
   }
   \titlepage
 \end{frame}
@@ -49,6 +49,7 @@
   \begin{itemize}
     \item Wanipigow : autochtones (amérindiens) du Canada
     \item Réserve Hollow Water (Manitoba), 16 km², 500 habitants
+    \item \href{https://www.nfb.ca/film/hollow_water/}{Intro (33 sec)}
   \end{itemize}
   \begin{block}{Hollow Water}
     \begin{quote}
@@ -57,7 +58,23 @@
       (…)
     \end{quote}
     \begin{quote}
-      At that stage, all we were able to say was we were abused, but we were not saying that sexual abuse, like we wouldn't even say the word because it was so, I don't know, really horrible anyway, those days.
+      At that stage, all we were able to say was we were abused, but we were not saying that sexual abuse, like we wouldn’t even say the word because it was so, I don’t know, really horrible anyway, those days.
+      ()
+    \end{quote}
+    \begin{quote}
+%       not everyone in hollow water supported
+% richard and deb, or the work of chch.
+% Both were a reminder of what some in the community
+% wanted to keep buried.
+% We didn’t need all this crap that was coming down on us
+% because our people were pointing fingers at us.
+% Like, it’s your problem, you know,
+% and you brought abuse here.
+It’s not that they don’t want to deal with the abuse,
+it’s the pain that comes with it.
+That’s what’s scary.
+And that’s what people don’t want to deal with
+because it’s so painful.
     \end{quote}
   \end{block}
 \end{frame}
@@ -69,7 +86,7 @@
   \end{itemize}
   \begin{block}{Comprendre \#MeToo (Lauren Bastide)}
     \begin{quote}
-      \#MeToo c'est difficile, \#MeToo c'est violent, \#MeToo c'est dur. Je pense que vous êtes nombreux et nombreuses ici a peut-être avoir ressenti ce que j'ai pu ressentir tout à l'heure en assistant à des conversations, des petites accélérations cardiaques un peu bizarres, des petits malaises, des petites nausées. Quand on parle de violences, notamment de violences sexuelles, on parle de traumatismes
+      \#MeToo c’est difficile, \#MeToo c’est violent, \#MeToo c’est dur. Je pense que vous êtes nombreux et nombreuses ici a peut-être avoir ressenti ce que j’ai pu ressentir tout à l’heure en assistant à des conversations, des petites accélérations cardiaques un peu bizarres, des petits malaises, des petites nausées. Quand on parle de violences, notamment de violences sexuelles, on parle de traumatismes
     \end{quote}
   \end{block}
   \begin{itemize}
@@ -81,7 +98,7 @@
   \frametitle{Peur des représailles, du jugement social}
   \begin{block}{Enquêter sur les violences (Lénaïg Bredoux)}
     \begin{quote}
-      La médiatisation des affaires, il suffit de demander à des femmes qui sont passées par là, à quel point c'est difficile, c'est long. (…) c'est pénible, parce que c'est beaucoup d'angoisse, c'est beaucoup de stress, vous ne savez pas la réception de tout ça. Et il y a aussi un énorme facteur de peur. Il y a la peur du cyberharcèlement, il y a la peur de la réception, de la réaction de sa famille, de ses proches, de son entourage professionnel, mais aussi la peur des poursuites judiciaires et notamment des poursuites en diffamation.
+      La médiatisation des affaires, il suffit de demander à des femmes qui sont passées par là, à quel point c’est difficile, c’est long. (…) c’est pénible, parce que c’est beaucoup d’angoisse, c’est beaucoup de stress, vous ne savez pas la réception de tout ça. Et il y a aussi un énorme facteur de peur. Il y a la peur du cyberharcèlement, il y a la peur de la réception, de la réaction de sa famille, de ses proches, de son entourage professionnel, mais aussi la peur des poursuites judiciaires et notamment des poursuites en diffamation.
     \end{quote}
   \end{block}
   \begin{itemize}
@@ -93,22 +110,40 @@
 \subsection{Limites du système judiciaire}
 \begin{frame}
   \frametitle{Les limites du système judiciaire classique}
+  Reconnaissance légale d’un fait qualifié VS \og{}Je te crois\fg{}
+  \begin{block}{Comprendre \#MeToo (Lauren Bastide), \href{https://podcasts.musixmatch.com/podcast/01gz0dx010r13t2j6yymscmvrf/episode/01gz0dx010r13t2j6yymscmvrp?time=670.945}{11m10}}
+    \begin{quote}
+      Alors c’est simple, tous les hommes célèbres on va dire, d’ailleurs les seuls qui ont été véritablement médiatisés, qui ont été visés par des accusatrices pour viols, agressions sexuelles ou harcèlement etc, tous, tous sans la moindre exception, ont nié. Et ça, c’est quand même hallucinant, même PPDA où il y a quand même une accumulation de témoignages absolument... enfin voilà, il y a vraiment beaucoup, beaucoup, beaucoup de femmes qui ont parlé ensemble, qui racontent la même chose en boucle, c’est quand même compliqué de penser que c’est faux, il va les attaquer en diffamation. Ce recours à la diffamation, c’est un procédé qu’on retrouve, voilà, systématiquement.
+      % (…) c’est quand même assez incroyable de voir que systématiquement rentrer en fait dans les médias en disant "j’ai été victime de viol", c’est devoir se battre pour prouver qu’on ne ment pas. 
+      % Et d’ailleurs parfois se battre au point d’y consacrer sa vie entière. 
+      % Enfin, je parle aussi de Sand Van Roy qui est l’une des principales personnes qui a parlé contre Luc Besson dans l’espace public: elle a littéralement repris ses études de droit pour devenir avocate, elle est en train de consacrer sa vie entière à devoir laver son honneur parce qu’on lui répète que elle ment. Donc évidemment, je pense que ce n’est pas un hasard en fait, si l’une des phrases les plus importantes qui a émergé très rapidement dans le milieu féministe, c’est "Je te crois". On l’a vu affiché sur les murs par les... (…)
+      % On l’a chanté en manif, voilà, les colleureuses féministes l’ont beaucoup écrit. Nous Toutes et notre amie commune, Caroline De Haas, aussi nous a appris à toujours dire ça en premier à une victime qui vient nous voir. C’est extrêmement important parce que on sait que derrière, dans la société, tout le monde lui dit "tu mens". Je pense que c’est aussi pour ça que la notion de sororité a été aussi importante ces cinq dernières années. On a énormément insisté sur la sororité parce que finalement, j’ai l’impression que parmi les rares effets bénéfiques concrets de \#MeToo, il y a eu quand même cette consolation qu’on a trouvé a ne plus être seules. Et je pense que parmi toutes les femmes avec lesquelles j’ai parlé, ce qui revient le plus souvent, ce que m’a dit par exemple Flavie Flament ou les victimes de PPDA, c’est cette idée de "Ben oui, mais en fait, oui, c’est violent dehors. Oui, je me fais cyberharcelée. Oui, mon agresseur dit que je mens. Mais maintenant, je ne suis pas seule, j’ai des soeurs qui me croient. Et je pense que cette sororité là, elle a été en fait une consolation, une réparation extrêmement forte. Donc voilà, on est obligé de dire "Je te crois".
+    \end{quote}
+  \end{block}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Les limites du système judiciaire classique}
   \begin{itemize}
-    \item Un processus centré sur la preuve, où la parole de la victime est souvent mise en doute.
-    \item \og{}Je te crois\fg{}, mais pas en justice !
-    \item Classements sans suite et taux de condamnation faibles : un facteur de découragement
-    \item Différence entre la reconnaissance légale d’un fait qualifié et la contestation de la parole de la victime
+    \item Classements sans suite et taux de condamnation faibles, découragement
     \item Absence d’un dialogue direct avec l’agresseur : l’agresseur ne se remet pas en question de la même manière
+    \item Même s’il demande pardon, on peut suspecter une stratégie défensive
   \end{itemize}
 \end{frame}
 
 \subsection{Conséquences du silence}
 \begin{frame}
-  \frametitle{Conséquences du silence sur les individus et les communautés}
+  \frametitle{Conséquences sur les individus et les communautés}
   \begin{itemize}
-    \item Traumatisme prolongé pour les victimes. (cf arbre généalogique)
-    \item Transmission intergénérationnelle des violences et maintien des dynamiques dysfonctionnelles.
+    \item Traumatisme prolongé pour les victimes
+    \item Transmission intergénérationnelle des violences et maintien des dynamiques dysfonctionnelles
   \end{itemize}
+  % picture Wont.png
+  % \newcommand\measurepage{\dimexpr\pagegoal-\pagetotal-\baselineskip\relax}
+  \begin{center}
+    \includegraphics[height=5cm]{Wont.png}
+  \end{center}
+  % \includegraphics[height=\dimexpr\pagegoal-\pagetotal-\baselineskip\relax]{Wont.png}
 \end{frame}
 
 \section{La justice restauratrice}
