--- a/restaurative.tex
+++ b/restaurative.tex
@@ -22,9 +22,9 @@
     \path (current page.south east) node[anchor=south east, inner sep=0] {
       \includegraphics[height=1cm]{LAMSADE95.jpg}
     };
-    % \path (current page.south) ++ (0, 4em) node[anchor=south, inner sep=0] {
-    %   \scriptsize\textcolor{blue}{\url{https://github.com/oliviercailloux/restaurative}}
-    % };
+    \path (current page.south) ++ (0, 4em) node[anchor=south, inner sep=0] {
+      \scriptsize\textcolor{blue}{\url{https://github.com/oliviercailloux/restaurative}}
+    };
   }
   \titlepage
 \end{frame}
@@ -146,7 +146,7 @@ because it’s so painful.
   % \includegraphics[height=\dimexpr\pagegoal-\pagetotal-\baselineskip\relax]{Wont.png}
 \end{frame}
 
-\section{La justice restauratrice}
+\section{La justice restaurative}
 \subsection{Espace de parole pour les victimes}
 \begin{frame}
   \frametitle{Un espace de parole pour les victimes}
