--- a/restaurative.tex
+++ b/restaurative.tex
@@ -126,7 +126,7 @@ because it’s so painful.
   \frametitle{Les limites du système judiciaire classique}
   \begin{itemize}
     \item Classements sans suite et taux de condamnation faibles, découragement
-    \item Absence d’un dialogue direct avec l’agresseur : l’agresseur ne se remet pas en question de la même manière
+    \item Absence d’une confrontation (directe ou indirecte) avec l’agresseur : l’agresseur ne se remet pas en question de la même manière
     \item Même s’il demande pardon, on peut suspecter une stratégie défensive
   \end{itemize}
 \end{frame}
