--- a/restaurative.tex
+++ b/restaurative.tex
@@ -148,8 +148,11 @@ because it’s so painful.
 \begin{frame}
   \frametitle{Un espace de parole pour les victimes}
   \begin{itemize}
-    \item Encouragement à s’exprimer dans un cadre sécurisé et non punitif. (cercle de parole de Hollow Water)
-    \item Reconnaissance de la souffrance par les agresseurs et la communauté. (groupe de parole → exemple des cercles de parole sur les accidents de la route)
+    \item Espaces de parole libre.
+    \item Importance de la verbalisation des violences dans des environnements bienveillants.
+    \item Réception de la parole des victimes par la communauté et les agresseurs.
+    \item Dialogue direct ou indirect selon les besoins des participants 
+  
   \end{itemize}
 \end{frame}
 
@@ -157,8 +160,10 @@ because it’s so painful.
 \begin{frame}
   \frametitle{Responsabilisation des auteurs : un levier pour transformer les comportements}
   \begin{itemize}
-    \item Travail sur le déni : amener les auteurs à reconnaître la gravité de leurs actes. (ex des parents dans le documentaire)
-    \item Rôle actif des agresseurs dans le processus de réparation : écouter, s’excuser, et s’engager à changer.
+    \item Objectif : éviter la récidive par une prise de conscience profonde.
+    \item Importance du dialogue et de la sensibilisation pour amener l'auteur à comprendre ses torts.
+    \item Intégration de programmes de réhabilitation et d'accompagnement thérapeutique.
+    \item Promotion de la responsabilisation collective.
   \end{itemize}
 \end{frame}
 
@@ -166,8 +171,10 @@ because it’s so painful.
 \begin{frame}
   \frametitle{Implication de la communauté : une réponse collective aux VSS}
   \begin{itemize}
-    \item Sensibilisation et responsabilisation collective pour prévenir les violences.
-    \item Dynamique d’entraide : exemple de Hollow Water, où la communauté joue un rôle central dans la réhabilitation.
+    \item Approche collective pour transformer les dynamiques sociales et culturelles.
+    \item Briser la culture du silence en éduquant la communauté sur les violences.
+    \item Prévention de la transmission des violences aux générations futures.
+    \item Modification structurelle des normes sociales vers une société plus sécurisante pour tous.
   \end{itemize}
 \end{frame}
 
