--- a/restaurative.tex
+++ b/restaurative.tex
@@ -59,7 +59,7 @@
     \end{quote}
     \begin{quote}
       At that stage, all we were able to say was we were abused, but we were not saying that sexual abuse, like we wouldn’t even say the word because it was so, I don’t know, really horrible anyway, those days.
-      ()
+      (…)
     \end{quote}
     \begin{quote}
 %       not everyone in hollow water supported
@@ -135,7 +135,7 @@ because it’s so painful.
 \begin{frame}
   \frametitle{Conséquences sur les individus et les communautés}
   \begin{itemize}
-    \item Traumatisme prolongé pour les victimes
+    \item Traumatisme prolongé pour les victimes {\small (mais voir aussi \citet{lilienfeld_50_2009})}
     \item Transmission intergénérationnelle des violences et maintien des dynamiques dysfonctionnelles
   \end{itemize}
   \begin{center}
@@ -214,16 +214,16 @@ because it’s so painful.
   \end{center}
 \end{frame}
 
-\end{document}
-
 \appendix
 \AtBeginSection{
 }
 
 \begin{frame}[allowframebreaks]
   \frametitle{\refname}
-   \bibliography{zotero}
+   \bibliography{restaurative}
 \end{frame}
+
+\end{document}
 
 \clearpage\pdfbookmark{License}{License}
 \begin{frame}[plain]
